2013-11-06  Ramon Novoa  <rnovoa@artica.es>

	* build_vars.sh: Added console dirs to auto-create OUM packages.

2013-10-16  Ramon Novoa  <rnovoa@artica.es>

	* build_vars.sh: Added arch information.

2013-09-30  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Updated the name of the server conf file.

2013-07-01  Ramon Novoa  <rnovoa@artica.es>

	* build_vars.sh: Use absolute paths.

2013-02-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* PandoraFMS_android_console/*: added first version of PandoraFMS
	android console (it is a custom browser standaralone for the
	Pandora Web Console Mobile).

2012-09-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* chrome_extension/manifest.json,
	chrome_extension/options.html,
	chrome_extension/background.html,
	chrome_extension/popup.html,
	chrome_extension/css/popup.css,
	chrome_extension/notification.html,
	chrome_extension/js/notification.js,
	chrome_extension/js/options.js,
	chrome_extension/js/background.js,
	chrome_extension/js/popup.js: Fixed extension to
	work with Chrome 2.x

2012-06-20  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update version in agent configuration
	  files.

2012-06-11  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update version string in server
	  configuration file.

012-05-05  Sancho Lerena <slerena@artica.es>

	* anytermd: Added anyterm to extras. Included modifications on original
	anytermd project source code. Added a new spec file for centos/fedora/rhel.
	Tested on FC16/i386 and centos6/x86_84.


2012-02-21  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Update agent version in versioninfo.rc.

2011-12-21  Ramon Novoa  <rnovoa@artica.es>

	* build_vars.sh: Added to repository. Defines environment variables
	  needed to build Pandora FMS.

	* build_src.sh, build_windows_agent.sh,
	  build_deb.sh, pandora_update_version.sh,
	  build_rpm.sh: Source build_vars.sh.
	
	* build_rpm_redhat.sh: Added to repository. Script to build